--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,13 +16,26 @@ a {
   box-sizing: border-box;
 }
 
-.client-auth-canvas {
-  position: absolute;
-}
-
 .client-auth-webcam,
 .client-auth-canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.detection-box {
+  background: linear-gradient(to right, black 4px, transparent 4px) 0 0,
+    linear-gradient(to right, black 4px, transparent 4px) 0 100%,
+    linear-gradient(to left, black 4px, transparent 4px) 100% 0,
+    linear-gradient(to left, black 4px, transparent 4px) 100% 100%,
+    linear-gradient(to bottom, black 4px, transparent 4px) 0 0,
+    linear-gradient(to bottom, black 4px, transparent 4px) 100% 0,
+    linear-gradient(to top, black 4px, transparent 4px) 0 100%,
+    linear-gradient(to top, black 4px, transparent 4px) 100% 100%;
+
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
 }
